--- a/interview-practice-questions/index.html
+++ b/interview-practice-questions/index.html
@@ -7,15 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="number" name="" id="input1" />
-    <input type="number" name="" id="input2" />
-    <br />
+    <input type="text " id="input" />
     <hr />
-    <button id="btn-plus">plus</button>
-    <button id="btn-minus">minus</button>
-    <button id="btn-div">div</button>
-    <button id="btn-mul">mul</button>
-    <br />
+    <button id="incr">increase</button>
+    <button id="decr">decrease</button>
+    <hr />
     <div id="output"></div>
   </body>
   <script src="index.js"></script>
