--- a/interview-practice-questions/index.html
+++ b/interview-practice-questions/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text " id="input" />
-    <hr />
-    <button id="incr">increase</button>
-    <button id="decr">decrease</button>
-    <hr />
+    <input type="text" id="input" />
+    <br />
+    <button id="h1">h1</button>
+    <button id="h2">h2</button>
+    <button id="h3">h3</button>
+    <br />
     <div id="output"></div>
   </body>
   <script src="index.js"></script>
