--- a/interview-practice-questions/index.html
+++ b/interview-practice-questions/index.html
@@ -9,9 +9,9 @@
   <body>
     <input type="text" id="input" />
     <br />
-    <button id="h1">h1</button>
-    <button id="h2">h2</button>
-    <button id="h3">h3</button>
+    <button id="red">red</button>
+    <button id="blue">blue</button>
+    <button id="green">green</button>
     <br />
     <div id="output"></div>
   </body>
