--- a/interview-practice-questions/ques-15/index.html
+++ b/interview-practice-questions/ques-15/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <input type="text" id="input" style="outline: none" />
-    <button id="btn">submit</button>
-    <div id="output"></div>
-  </body>
+  <body></body>
   <script src="index.js"></script>
 </html>
